results for cc-licence

--- a/deutscher_blog_webcrawler/results.ipynb
+++ b/deutscher_blog_webcrawler/results.ipynb
@@ -43,11 +43,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-04-01 12:01:23.188\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mDas Programm hat: 66041 Tags überprüft.\u001b[0m\n",
-      "\u001b[32m2025-04-01 12:01:23.831\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m13\u001b[0m - \u001b[1mEs wurden insgesammt: 457866 unique Posts gefunden.\u001b[0m\n",
-      "\u001b[32m2025-04-01 12:01:23.847\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m16\u001b[0m - \u001b[1mDiese wurden in: 11339 uniquen Blogs veröffentlicht.\u001b[0m\n",
-      "\u001b[32m2025-04-01 12:01:25.035\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m19\u001b[0m - \u001b[1mAls deutsch erkannt, wurden: 371841 Posts.\u001b[0m\n",
-      "\u001b[32m2025-04-01 12:01:25.045\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m22\u001b[0m - \u001b[1mZu den Posts sind: 12589 unique Authoren gefunden worden (nicht für alle Posts sind Authoren bekannt).\u001b[0m\n"
+      "\u001b[32m2025-04-01 19:16:49.205\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mDas Programm hat: 66041 Tags überprüft.\u001b[0m\n",
+      "\u001b[32m2025-04-01 19:16:49.831\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m13\u001b[0m - \u001b[1mEs wurden insgesammt: 457866 unique Posts gefunden.\u001b[0m\n",
+      "\u001b[32m2025-04-01 19:16:49.848\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m16\u001b[0m - \u001b[1mDiese wurden in: 11339 uniquen Blogs veröffentlicht.\u001b[0m\n",
+      "\u001b[32m2025-04-01 19:16:50.980\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m19\u001b[0m - \u001b[1mAls deutsch erkannt, wurden: 371841 Posts.\u001b[0m\n",
+      "\u001b[32m2025-04-01 19:16:50.990\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m22\u001b[0m - \u001b[1mZu den Posts sind: 12589 unique Authoren gefunden worden (nicht für alle Posts sind Authoren bekannt).\u001b[0m\n"
      ]
     }
    ],
@@ -86,8 +86,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-04-01 12:01:25.670\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m7\u001b[0m - \u001b[1mAls englisch erkannt, wurden: 64004 Posts.\u001b[0m\n",
-      "\u001b[32m2025-04-01 12:01:26.208\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mWeder als englisch noch als deutsch erkannt, wurden: 19737 Posts.\u001b[0m\n"
+      "\u001b[32m2025-04-01 19:16:53.509\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m7\u001b[0m - \u001b[1mAls englisch erkannt, wurden: 64004 Posts.\u001b[0m\n",
+      "\u001b[32m2025-04-01 19:16:54.068\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mWeder als englisch noch als deutsch erkannt, wurden: 19737 Posts.\u001b[0m\n"
      ]
     }
    ],
@@ -133,31 +133,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-04-01 12:13:43.437\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m5\u001b[0m - \u001b[1mUnter einer CC-Lizenz veröffentlicht, wurden: 0 Blogs\u001b[0m\n"
+      "\u001b[32m2025-04-01 19:27:59.553\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m7\u001b[0m - \u001b[1mUnter einer CC-Lizenz veröffentlicht, wurden: 25 Blogs\u001b[0m\n",
+      "\u001b[32m2025-04-01 19:28:12.964\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mIn diesen Blogs wurden insgesammt 477 Posts veröffentlicht\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "all_cc_licence_blogs: list[Blog] = []\n",
+    "post_count: int = 0\n",
+    "\n",
     "with Session(engine) as session:\n",
-    "        statement = select(Blog.cc_licence).where(Blog.cc_licence == True)\n",
+    "        statement = select(Blog).where(Blog.cc_licence == True)\n",
     "        all_cc_licence_blogs = session.exec(statement).all()\n",
-    "        logger.info(f'Unter einer CC-Lizenz veröffentlicht, wurden: {len(all_cc_licence_blogs)} Blogs')"
+    "        logger.info(f'Unter einer CC-Lizenz veröffentlicht, wurden: {len(all_cc_licence_blogs)} Blogs')\n",
+    "        for blog in all_cc_licence_blogs:\n",
+    "            post_count = post_count + len(blog.posts)\n",
+    "        logger.info(f'In diesen Blogs wurden insgesammt {post_count} Posts veröffentlicht')\n",
+    "            "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
